add_executable(xproc_ringbuffer_tests ringbuffer_spsc_test.cpp)
target_link_libraries(xproc_ringbuffer_tests PRIVATE xproc)
add_test(NAME xproc_ringbuffer_tests COMMAND xproc_ringbuffer_tests)

add_executable(xproc_layout_validate_tests layout_validate_test.cpp)
target_link_libraries(xproc_layout_validate_tests PRIVATE xproc)
add_test(NAME xproc_layout_validate_tests COMMAND xproc_layout_validate_tests)

add_executable(xproc_ipc_observer_attach_tests ipc_observer_attach_test.cpp)
target_link_libraries(xproc_ipc_observer_attach_tests PRIVATE xproc)
add_test(NAME xproc_ipc_observer_attach_tests COMMAND xproc_ipc_observer_attach_tests)

if(WIN32)
    add_executable(xproc_win32_wait_shm_tests win32_wait_shm_test.cpp)
    target_link_libraries(xproc_win32_wait_shm_tests PRIVATE xproc)
    add_test(NAME xproc_win32_wait_shm_tests COMMAND xproc_win32_wait_shm_tests)
endif()

add_executable(xproc_ipc_integration_tests ipc_integration_test.cpp)
target_link_libraries(xproc_ipc_integration_tests PRIVATE xproc)
add_test(NAME xproc_ipc_integration_tests COMMAND xproc_ipc_integration_tests)

add_executable(xproc_protocol_codec_tests protocol_codec_test.cpp)
target_link_libraries(xproc_protocol_codec_tests PRIVATE xproc)
add_test(NAME xproc_protocol_codec_tests COMMAND xproc_protocol_codec_tests)

add_executable(xproc_ringbuffer_full_ring_test ringbuffer_full_ring_test.cpp)
target_link_libraries(xproc_ringbuffer_full_ring_test PRIVATE xproc)
add_test(NAME xproc_ringbuffer_full_ring_test COMMAND xproc_ringbuffer_full_ring_test)

if(XPROC_BUILD_TESTS AND (XPROC_WITH_NLOHMANN_JSON OR XPROC_WITH_PROTOBUF))
    set(_xproc_opt_serde_src optional_serde_test.cpp)
    set(_xproc_opt_serde_gen "")
    if(XPROC_WITH_PROTOBUF)
        find_package(Protobuf REQUIRED)
        protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS "${CMAKE_SOURCE_DIR}/proto/test_point.proto")
        set(_xproc_opt_serde_gen ${PROTO_SRCS} ${PROTO_HDRS})
    endif()
    add_executable(xproc_optional_serde_tests ${_xproc_opt_serde_src} ${_xproc_opt_serde_gen})
    target_link_libraries(xproc_optional_serde_tests PRIVATE xproc)
    if(XPROC_WITH_PROTOBUF)
        target_include_directories(xproc_optional_serde_tests PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
    endif()
    add_test(NAME xproc_optional_serde_tests COMMAND xproc_optional_serde_tests)
endif()
